added permission methods