@@ -1,23 +1,44 @@
 package com.shepherd.shepslibrary.security;
 
 import com.shepherd.shepslibrary.data.model.User;
+import com.shepherd.shepslibrary.data.model.UserRole;
 import lombok.Builder;
 import lombok.Getter;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
+import java.util.ArrayList;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 
 @Builder
 @Getter
+@Slf4j
 public class AuthenticatedUser implements UserDetails {
     private final User user;
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of(new SimpleGrantedAuthority("ROLE_" + user.getRole().getName()));
+        if(user == null || user.getRole() == null) {
+            log.info("The user or user role is empty");
+            return Collections.emptyList();
+        }
+
+        UserRole role = user.getRole();
+        List<SimpleGrantedAuthority> authorities = new ArrayList<>();
+
+        authorities.add(new SimpleGrantedAuthority("ROLE_" + role.getName()));
+
+        if(role.getPermissions() != null) {
+            role.getPermissions().stream()
+                    .map(permission -> new SimpleGrantedAuthority(permission.getName()))
+                    .forEach(authorities::add);
+        }
+        return authorities;
+//        return List.of(new SimpleGrantedAuthority("ROLE_" + user.getRole().getName()));
     }
 
     @Override
